character 2 overflow fix

--- a/style/style.scss
+++ b/style/style.scss
@@ -1744,18 +1744,26 @@ footer {
                     width: 317px;
                 }
             }
+        }
+        
+        .player-wrapper {
+            display: flex;
+            position: absolute;
+            width: 100%;
+            height: 273px;
+            top: 815px;
+            justify-content: center;
+            overflow: hidden;
 
             .player-container {
-                display: flex;
-                width: 0;
-                height: 0;
-
+                position: absolute;
+    
                 .player-1 {
                     position: relative;
                     width: 152px;
                     height: 264px;
-                    top: -130px;
-                    left: -784px;
+                    top: 15px;
+                    left: -313px;
                     z-index: 10;
                 }
     
@@ -1763,8 +1771,9 @@ footer {
                     position: relative;
                     width: 221px;
                     height: 273px;
-                    top: -145px;
-                    right: 77px;
+                    top: 2px;
+                    left: 380px;
+                    z-index: 10;
                 }
             }
         }
